0.6.1 (2009-02-25)
==================

- Fixed constructor inheritance issues which kept ``repoze.catalog``
  from working under Python 2.6.  Note that this change involved removing
  the ``*args, **kw`` arguments from index constructors:  those values were
  never used, but had (bogus) tests.

0.6.0 (2009-02-16)
==================

- N-Best ascending fieldindex sort was being chosen incorrectly when
  there was no limit.  Symptom: ``RuntimeError, 'n-best used without
  limit'``.

0.5.9 (2009-02-16)
==================

- Add ``reindex_doc`` method as an alias for ``index_doc`` to both
  CatalogFieldIndex and CatalogKeywordIndex (for performance,
  ``index_doc`` for both indexes has special case code for reindexing).

0.5.8 (2009-02-16)
==================

- Speed up path2 index attribute search by using __getitem__ rather
  than .get in some places.

- Override textindex reindex_doc method: calling index_doc only
  instead of calling unindex_doc and then index_doc is much more
  efficient.

0.5.7 (2009-02-14)
==================

- Attributes returned to attribute checker were not correct.

0.5.6 (2009-02-12)
==================

- Add "attribute discriminator" and "attribute checker" support to
  path2 index.  If an index is created with an attribute
  discriminator, when any object is indexed, the value of the
  attribute will be stored in the path index.  The path index will
  know that that attribute belongs to a particular path.  Later, when
  the "attribute checker" feature of the ``apply`` or ``search``
  method is used, a user-supplied attribute checker function will be
  able to filter the result set returned by the index.  This is used
  by the author primarily to support security-filtered searches of a
  path index.  It is not otherwise documented.
  
0.5.5 (2009-02-11)
==================

- Add a ``reindex_doc`` method to the catalog and to the ``common``
  shared index base class.  The catalog's ``reindex_doc`` calls each